--- a/index.html
+++ b/index.html
@@ -100,8 +100,6 @@
             font-weight: 400;
             letter-spacing: 0.5px;
         }
-
-> Даша:
 .intro-text p {
             font-size: 1.1em;
             opacity: 0.9;
@@ -245,8 +243,6 @@
             font-weight: 500;
             color: white;
         }
-
-> Даша:
 /* Футер */
         footer {
             grid-area: footer;
@@ -318,8 +314,6 @@
                 transform: translateY(0);
             }
         }
-
-> Даша:
 .card {
             animation: fadeInUp 0.6s ease-out;
         }
@@ -336,8 +330,7 @@
                 <div class="hero-content">
                     <div class="avatar-container">
                         <div class="avatar">
-                            <!-- Вставьте ваше изображение здесь -->
-                            <img src="your-image.jpg" alt="Чечина Диана">
+                            <img src="images/1.jpg" alt="Чечина Диана">
                         </div>
                     </div>
                     <div class="intro-text">
