--- a/index.html
+++ b/index.html
@@ -344,8 +344,8 @@
                     <h3>Контакты</h3>
                     <p>Email: chechina.diana@tpu.com</p>
                     <div class="social-links">
-                        <a href="https://t.me/your_telegram" class="social-link" target="_blank">Telegram</a>
-                        <a href="https://github.com/your_github" class="social-link" target="_blank">GitHub</a>
+                        <a href="https://t.me/chechiina" class="social-link" target="_blank">Telegram</a>
+                        <a href="https://github.com/kwqur" class="social-link" target="_blank">GitHub</a>
                     </div>
                 </div>
             </aside>
