--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                 <div class="hero-content">
                     <div class="avatar-container">
                         <div class="avatar">
-                            <img src="images/2.png" alt="Чечина Диана">
+                            <img src="images/3.jpg" alt="Чечина Диана">
                         </div>
                     </div>
                     <div class="intro-text">
